adding test cases as well unit test
